[metadata]
name = face_lensing
description = Your face through a gravitational lens
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexandre Boucaud
author_email = aboucaud@apc.in2p3.fr
license = MIT
url = https://github.com/aboucaud/face_lensing
github_project = aboucaud/face_lensing
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/aboucaud/face_lensing/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools>=40.0
    wheel
    setuptools_scm
install_requires =
    numpy
    scipy
    opencv-python

[options.entry_points]
console_scripts =
    face-lensing-app = face_lensing.__main__:main

[options.package_data]
face_lensing = *.npz

[bdist_wheel]
universal = true
